2008-11-12  James Liggett  <jrliggett@cox.net>

	* plugins/editor/properties.cxx:
	Fix some DEBUG_PRINT compile problems in the Scintilla plugin.

2008-11-11  Sébastien Granjoux  <seb.sfo@free.fr>

	* libanjuta/anjuta-profile.c,
	libanjuta/anjuta-profile.h,
	libanjuta/anjuta-profile-manager.c,
	libanjuta/anjuta-plugin-manager.c,
	libanjuta/anjuta-plugin-manager.h,
	src/anjuta.c,
	plugins/project-manager/plugin.c:
	Fix #307886 - Activated plugins not remembered the first time
	Replace gnome-vfs by gio

2008-11-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	reviewed by: James Liggett <jrliggett@cox.net>:

	* libanjuta/anjuta-debug.h:
	* libanjuta/anjuta-launcher.c (anjuta_launcher_class_init),
	(anjuta_launcher_synchronize), (anjuta_launcher_scan_output),
	(anjuta_launcher_scan_error), (anjuta_launcher_scan_pty),
	(anjuta_launcher_check_for_execution_done):
	* libanjuta/anjuta-plugin-manager.c (collect_cycle):
	* libanjuta/anjuta-shell.c (anjuta_shell_thaw),
	(anjuta_shell_session_load):
	* plugins/build-basic-autotools/executer.c (execute_program):
	* plugins/build-basic-autotools/plugin.c (build_context_pop_dir),
	(on_message_view_destroyed), (update_module_ui),
	(update_project_ui), (ifile_get_file):
	* plugins/class-gen/plugin.c (activate_plugin),
	(deactivate_plugin):
	* plugins/class-inheritance/class-inherit.c
	(cls_inherit_draw_graph), (class_inheritance_update_graph):
	* plugins/class-inheritance/plugin.c (activate_plugin),
	(deactivate_plugin):
	* plugins/cvs-plugin/cvs-actions.c (on_server_type_changed):
	* plugins/cvs-plugin/cvs-execute.c (on_cvs_terminated):
	* plugins/cvs-plugin/cvs-interface.c (anjuta_cvs_import):
	* plugins/cvs-plugin/plugin.c (value_added_project_root_uri),
	(activate_plugin), (deactivate_plugin):
	* plugins/debug-manager/debug_tree.c (debug_tree_add_watch):
	* plugins/debug-manager/plugin.c (dma_plugin_debugger_started),
	(dma_plugin_program_loaded), (dma_plugin_program_running),